# devenv-flask

./: ._html  .black  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .venv 2  LICENSE  Makefile  NOTE  README.md  __init__.py  admin.py  app.py  example.py  flake.nix  lib.py  main.py  models-by-reflection.py  models.py  plan.py  pyproject.toml  user.py  wc.py  未命名.ipynb
SQL/: travel.sql  user.sql
SQL/data/: admin.sql  convert_xlsx_into_sql.py  data.xlsx  product_detail.sql  user.sql  ~$data.xlsx
app/templates/: base.html
docs/: config.toml  theme.toml
docs/content/: git-commit.md  (+7 more)
html/: ._index-1.html  ._index-2.html  about-3.html  about.html  destination-404.html  destination.html  ecommerce-form.html  ecommerce-payment.html  index-1.html  index-2.html  index.html  projects-detail.html  service-1.html  works-carousel.html  works.html
static/: about-2.html  about-3.html  about.html  blog-post.html  blog.html  contact.html  destination-404.html  destination.html  ecommerce-checkout.html  ecommerce-form.html  ecommerce-payment.html  ecommerce.html  index-1.html  index-2.html  index.html  projects-detail-2.html  projects-detail.html  service-1.html  works-carousel.html  works.html
templates/: AttractionsDetailPage.html  ClientIndex.html  Titanic.html  about.html  baiduMap_search.html  base.html  blog-post.html  blog.html  contact.html  ecommerce-checkout.html  ecommerce-form.html  ecommerce-payment.html  empty.html  gallery.html  hpRank250.html  index.html  index1.html  lpRank250.html  map.html  planing.html  profile.html  scoreBar.html  scoreBokeh.html  wordcloud.html
(+65 files in other folders)
