[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["jackyliu16 <18922251299@163.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
bokeh = "^3.1.1"
matplotlib = "^3.7.1"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.3"
mysqlclient = "^2.1.1"
pymysql = "^1.0.3"
flask-mysqldb = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
