[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["jackyliu16 <18922251299@163.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
bokeh = "^3.1.1"
matplotlib = "^3.7.1"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.3"
flask-table = "^0.5.0"
mysql-connector-python = "^8.0.33"
flask-babel = "^3.1.0"
flask-sqlacodegen = "^2.0.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
